src/objects/Visitor__c.object
<CustomObject>
    <fields>
        <fullName>Chanel__c</fullName>
        <label>Chanel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Number__c</fullName>
        <label>Chat Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Flow__c</fullName>
        <label>Current Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDPR_Consent__c</fullName>
        <label>GDPR Consent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Access</fullName>
                </value>
                <value>
                    <fullName>Restricted Access</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                    <default>true</default>
                    <label>No Access</label>
                </value>
                <value>
                    <fullName>Quick Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Had_First_Interaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Had First Interaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Livechat_Session_Key__c</fullName>
        <label>Livechat Session Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Flow__c</fullName>
        <label>Next Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Reason__c</fullName>
        <label>Opt-Out Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>keyword__c</fullName>
        <label>keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>language__c</fullName>
        <label>language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>reservation_time__c</fullName>
        <label>reservation time</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Visitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V{00000000}</displayFormat>
        <label>Visitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>